style/style.css
:root {
    --primary: #FF1053;
    --secondary: #f2f4f3;
    --terciary: #222;
    --spacing: 4rem;
    color: #222;
  }

  body {
    font-family: 'Ubuntu', sans-serif;
    background-color: var(--secondary);
  }

  header {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: var(--spacing);
  }

  .neutral-theme {
    background-color: var(--secondary);
    --button-color: var(--primary);
    --button-border-color: var(--terciary);
    --button-hover-color: var(--secondary);
    --selection-text: var(--secondary);
    --selection-background: var(--terciary);
  }

  .primary-theme {
    color: var(--secondary);
    background-color: var(--primary);
    --button-color: var(--secondary);
    --button-border-color: var(--secondary);
    --button-hover-color: var(--primary);
    --selection-background: var(--terciary);
  }

  h1 {
    margin-bottom: 2rem;
    font-size: 7vw;
    font-weight: bold;
    line-height: 1.2em;
    text-align: center;
  }

  h1::selection {
    background: var(--selection-background);
    color: var(--secondary);
  }

  h2 {
    margin-bottom: 8vw;
    text-align: center;
    font-size: 7vw;
    font-weight: bold;
    text-transform: uppercase;
  }

  h2::selection {
    color: var(--selection-text);
    background-color: var(--selection-background);
  }

  h3 {
    margin-bottom: 1rem;
    font-size: 1.5rem;
    font-weight: bold;
  }

  h3::selection {
    color: var(--selection-text);
    background-color: var(--selection-background);
  }

  .heading-highlight {
    color: var(--primary);
  }

  .heading-highlight::selection {
    background-color: var(--terciary);
  }

  .heading-me {
    font-size: 4.5vw;
    font-weight: 400;
    line-height: .5rem;
    padding-top: 3rem;
  }

  .heading-me::selection {
    background: var(--terciary);
    color: var(--secondary);
  }

  .button {
    display: inline-block;
    width: max-content;
    padding: 1rem 3rem;
    border: 2px solid var(--button-border-color);
    border-radius: .5rem;
    font-weight: bold;
    text-decoration: none;
    text-align: center;
    color: var(--button-color);
  }

  .button:hover {
    color: var(--button-hover-color);
    background-color: var(--button-color);
    transition-property: background-color ease-in-out;
    transition-duration: .5s;
  }

  .button:focus {
    background-color: var(--terciary);
  }

  section {
    padding: var(--spacing);
  }

  .about-container {
    display: flex;
    flex-direction: column;
    align-items:flex-start;
    margin-right: auto;
    max-width: 960px;
    margin: 0 auto;
  }

  .about-img {
    margin-bottom: 2vw;
    display: block;
    transform-origin: center;
    transform: rotate(-5deg);
    filter: grayscale(0);
    border-radius: 1vw;
    border-top: 1vw solid var(--secondary);
    border-right: 1vw solid var(--secondary);
    border-bottom: 5vw solid var(--secondary);
    border-left: 1vw solid var(--secondary);
    box-shadow: 0px 1px var(--terciary);
  }

  img {
    height: auto;
    max-width: 35vw;
  }

  p {
    font-size: 3vw;
    margin-bottom: 2vw;
    line-height: 1.8em;
  }

  p::selection {
    color: var(--selection-text);
    background-color: var(--selection-background);
  }

  a::selection {
    background-color: var(--selection-background);
  }

  .about-text {
    display: flex;
    flex-direction: column;
    align-items: left;
  }

  blockquote {
    margin-top: var(--spacing);
    padding: 0 10vw;
    font-size: 3vw;
    font-style: italic;
    text-align: center;
    line-height: 5vw;
  }

  blockquote::selection {
    background-color: var(--selection-background);
  }

  cite {
    display: block;
    margin-top: 1rem;
    font-size: 1rem;
    font-style: normal;
  }

  cite::selection {
    background-color: var(--selection-background);
  }

  .container-cards {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 2rem;
  }

  article {
    display: grid;
    border: 1px solid #CCC;
    border-radius: 1rem;
    box-shadow: -3px 5px 6px 2px rgba(0, 0 , 0, 0.02);
  }

  article p {
    font-size: .7rem;
    padding: 0 2rem 1rem 2rem;
  }

  article h3 {
    text-align: center;
    padding: 2rem 2rem 0 2rem;
  }


  .article-img {
    object-fit: cover;
    width: 100%;
    height: auto;
    max-width: none;
    margin-bottom: 1rem;
  }

  .article-buttons {
    display: grid;
    padding: 0 2rem 2rem 2rem;
    grid-gap: 2vw;
  }

  article .button {
    font-size: .8rem;
    line-height: 1.2rem;
    width: fit-content;
    height: auto;
  }

  .contact {
    text-align: left;
  }

  .contact-text {
    padding-bottom: 1em;
  }

  footer {
    padding: var(--spacing);
    text-align: center;
    color: white;
    background-color: var(--terciary);
  }

  .social {
    display: flex;
    justify-content: center;
    margin-bottom: var(--spacing);
    gap: 4rem;
  }

  .social-link {
    display: block;
    width: 60px;
    height: 60px;
    font-size: 0;
    color: transparent;
    background: no-repeat;
    background-size: 60px;
    transform: scale(1);
  }

  .social-link:hover {
    transform: scale(1.1);
    transition: all 0.3s ease-in-out;
  }

  .linkedin {
    background-image: url(https://victorious-curvy-bookcase.glitch.me/images/linkedin.svg);
  }

  .twitter {
    background-image: url(https://victorious-curvy-bookcase.glitch.me/images/twitter.svg);
  }

  .github {
    background-image: url(https://victorious-curvy-bookcase.glitch.me/images/github.svg);
  }

  .youtube {
    background-image: url(https://victorious-curvy-bookcase.glitch.me/images/youtube.svg);
  }


  .about {
    position: relative;
    margin-bottom: 100px;
  }

  .about::after {
    content: '';
    position: absolute;
    right: 0;
    bottom: -100px;
    width: 0;
    height: 0;
    border-top: 100px solid var(--primary);
    border-right: 100vw solid transparent;
  }

  @media (min-width: 860px) {
    h1 {
      font-size: 4vw;
    }

    .heading-me {
      font-size: 2.5vw;
    }

    h2 {
      margin-bottom: var(--spacing);
      text-align: center;
      font-size: 3vw;
      font-weight: bold;
      text-transform: uppercase;
    }

    h3 {
      font-size: 2rem;
    }

    .about-container {
      display: flex;
      flex-direction: row;
    }

    .about-img {
      filter: grayscale(100%);
      transform-origin: center;
      transform: rotate(0);
    }

    img {
      height: auto;
      max-width: 15vw;
    }

    .about-img {
      margin-bottom: 2vw;
      display: block;
      border-radius: 1vw;
      border-top: 1vw solid var(--secondary);
      border-right: 1vw solid var(--secondary);
      border-bottom: 5vw solid var(--secondary);
      border-left: 1vw solid var(--secondary);
      box-shadow: 0px 1px var(--terciary);
    }

    .about-img:hover {
      filter: grayscale(0);
      transform-origin: center;
      transform: rotate(-5deg);
      transition: 100ms ease-in-out all;
    }

    .about-text {
      display: flex;
      flex-direction: column;
      align-items: left;
      justify-content: space-between;
      margin-left: var(--spacing);
    }

    p {
      font-size: 1.5vw;
      text-align: left;
      line-height: 1.8em;
    }

    blockquote {
      margin-top: var(--spacing);
      padding: 0 10vw;
      font-size: 1.5vw;
      font-style: italic;
      text-align: center;
      line-height: 2.5vw;
    }

    .container-cards {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
      column-gap: 2rem;
    }

    article {
      display: grid;
      max-width: auto;
    }

    article p {
      font-size: 1.2rem;
    }

    .article-buttons {
      display: grid;
      grid-template-rows: none;
    }

    .contact {
      display: flex;
      flex-direction: column;
      align-items: center;
    }

    .contact-text {
      display: flex;
      flex-direction: column;
      align-items: center;
      padding-bottom: .5em;
    }

    .copy {
      text-align: center;
    }
  }

